Fix: navbar spacing/ padding

--- a/Frontend/src/Styles/Login.css
+++ b/Frontend/src/Styles/Login.css
@@ -41,7 +41,7 @@
   width: 8rem;
   height: 1.7rem;
   font-size: 1.2rem;
-  background-color: white;
+   background-color: rgb(0, 163, 163);
   border: none;
   color: black;
 }
